<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A318</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sShow">Show me List of ...</string>
    <string name="sAdd">Add new ...</string>
    <string name="hintName">type here name of client</string>
    <string name="male">Male</string>
    <string name="famale">Female</string>
    <string name="submit">Submit</string>
    <string name="hintNumber">type here age of client</string>
    <string name="sReturn">Return to menu</string>
    <string name="sIsMale">Is it male of female (check if male)</string>

</resources>
